<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- inherit pom in lphybeast-root -->
    <parent>
        <groupId>io.github.linguaphylo</groupId>
        <artifactId>lphybeast-root</artifactId>
        <!--  lphybeast version here    -->
        <version>2.0.0-SNAPSHOT</version>
    </parent>

    <groupId>io.github.moverwater</groupId>
    <artifactId>calibratedcpp-root</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>calibratedcpp-root</name>
    <url>https://github.com/moverwater/CalibratedCPP</url>

    <licenses>
        <license>
            <name>GNU Lesser General Public License v2.1</name>
            <url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Marcus Overwater</name>
            <url>https://github.com/moverwater</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/moverwater/CalibratedCPP.git</connection>
        <developerConnection>scm:git:ssh://github.com/moverwater/CalibratedCPP.git</developerConnection>
        <url>https://github.com/moverwater/CalibratedCPP</url>
    </scm>

    <properties>
        <lphy.vision>1.8.0-beta1</lphy.vision>
        <lphybeast.vision>2.0.0-SNAPSHOT</lphybeast.vision>
        <revision>0.0.1</revision>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://central.sonatype.com/</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>calibratedcpp-beast</module>
        <module>calibratedcpp-lphy</module>
        <module>calibratedcpp-lphy-studio</module>
        <module>calibratedcpp-lphybeast</module>
        <module>calibratedcpp-lphybeast-launcher</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals><goal>flatten</goal></goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals><goal>clean</goal></goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals><goal>jar-no-fork</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.6.3</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals><goal>jar</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals><goal>sign</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.5.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>